2001-07-05  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-common-report-options.sgml: fix my fix

	* doc/sgml/C/xacc-price-sources.sgml: fix warnings

	* src/guile/gnc.gwp: wrap new func

	* src/gnome/druid-stock-split.c: use new func

	* src/gnome/window-register.c: use new func

	* src/gnome/window-reconcile.c: use new func

	* src/gnome/reconcile-list.c: use new func

	* src/gnc-ui-util.c (gnc_account_print_info): new func. this
	replaces 'quantity' and 'value' print info for the currency-
	in-transaction switch. Delete the 'quantity' version.

2001-07-04  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/scm/report/transaction.scm: Michael T. Garrison Stuber's
	transaction report patch.

	* doc/sgml/C/xacc-common-report-options.sgml: fix warning

2001-07-05  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/xacc-depreciation.sgml: Minor updates.
	
	* doc/sgml/C/xacc-price-sources.sgml: Updated for 1.6

	* doc/sgml/C/image/ticker-{a,b}.png: Removed.
	
	* src/gnome/druid-qif-import.c: fix syntax bug.

	* doc/sgml/C/image/<lots.png>: new and updated screenshots.

	* doc/sgml/C/image/Makefile.am: include new files.

	* doc/sgml/C/{lots}.sgml: update for new screenshots.

2001-07-04  Bill Gribble  <grib@billgribble.com>

	* src/gnome/druid-qif-import.c: fix cut-n-paste error in 
	default_acct_back handler; fixes bug #106.  

	* src/gnome/glade/qif.glade: add some explanatory text about 
	what the "back" button does where it's not obvious

	* (later) actually fix #106... first patch didn't do it
	
2001-07-04  Dave Peticolas  <dave@krondo.com>

	* Makefile.am: add gnc-glossary.txt to the dist

	* src/engine/sixtp.c (sixtp_handle_catastrophe): fix bug -- don't
	destroy last stack frame

2001-07-03  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/register.scm: add exported functions and needed
	modules

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits
